css/app.css
/* Formulario */
.form {
    display: flex;
    flex-direction: column;
    background-color: #313132;
}
.halfform {
    display: flex;
    justify-content: center;
    align-items: center;
}
.field {
    display: flex;
    flex-direction: column;
    align-items: center;
    border: 0;
    min-width: 10rem;
    margin: 3rem;
    padding: 0;
}
.field2 {
    margin-top: 0;
}
.textinput {
    max-width: 12rem;
    font-size: 1.3rem;
    height: 1.9rem;
    border-radius: 2rem;
    text-align: center;
    color: #313132;
}
.label {
    font-weight: bold;
    margin-bottom: 0.5rem;
    color: #D6D6D6;
}
.select {
    border-radius: 2rem;
    text-align: center;
    padding: 0 0.2rem;
    background-color: white;
}
.select option {
    background-color: #313132;
    color: white;
}
/* Card */
.cardcontainer {
    display: flex;
    justify-content: center;
    align-items: center;
    height: 63rem;
}
.card {
    box-shadow: 0px 0px 5px 1px black;
    height: 45rem;
    width: 40rem;
    display: flex;
    flex-direction: column;
}
.backgroundcardurl {
    background-image: url(../img/bg.webp);
}
.backgroundcard {
    background-size: cover;
    background-position: bottom;
    height: 45%;
    display: flex;
    justify-content: end;
}
.restcard {
    height: 55%;
    background-color: #fefefe;
    display: flex;
    flex-direction: column;
    justify-content: end;
    align-items: center;
    padding-bottom: 5rem;
}
.cardnames {
    color: #313132;
}
.work {
    margin-top: 3rem;
    color: #b4b4b4;
}
.location {
    margin-top: 1.5rem;
    color: #bebebe;
}
.profilephoto {
    background-image: url(../img/pikachu.webp);
    background-size: cover;
    background-position: center;
    border-radius: 50%;
    height: 11rem;
    width: 11rem;
    position: relative;
    bottom: 5rem;
}
.rrss{
    background-color: #42D2CB;
    height: 11.7rem;
    width:fit-content;
    display: flex;
    flex-direction: column;
    justify-content: center;
    padding: 0.5rem 0.6rem;
    position: relative;
    left: 3.22rem;
    top: 1.5rem;
    box-shadow: 0px 0px 7px 1px black;
    /* z-index: -1; */
}
.icon {
    filter: invert(100%) sepia(16%) saturate(0%) hue-rotate(123deg) brightness(101%) contrast(101%);
    height: 2rem;
    margin-bottom: 1rem;
}
#instagram {
    margin-bottom: 0;
}
#twitter {
    margin-bottom: 0.7rem;
}
/* Pre-media_queries optimization */
.quarterform {
    display: flex;
}
/* Media Queries */
@media only screen and (max-width: 1130px){
    .halfform {
        flex-direction: column;
    }
}
@media only screen and (max-width: 565px){
    .quarterform {
        flex-direction: column;
    }
}
@media only screen and (max-width: 464px){
    .rrss{
        flex-direction: row;
        top: 45rem;
        left: -29vw;
        height: 1.8rem;
    }
    .icon {
        margin-bottom: 0;
        margin-right: 1rem;
    }
    #twitter {
        margin-right: 0.7rem;
    }
}

